2007-05-28 Joerg Faschingbauer <joerg.faschingbauer@aon.at>

	* Explicit interface rudimentary implemented.

2007-03-14 Joerg Faschingbauer <joerg.faschingbauer@aon.at>

	* libconfix.plugins.c.pkg_config: basic pkg-config support;
	  currently only supports finding an external library using
	  pkg-config. in the future, it's supposed to generate pkg-config
	  files for confix-generated libraries.

2007-03-05 Joerg Faschingbauer <joerg.faschingbauer@aon.at>

	* (Merged from TRY-jfasch-relocated-headers)
	  * new RELOCATE_HEADER() function
	  * "build" test suite for libconfix

2007-03-05 Joerg Faschingbauer <joerg.faschingbauer@aon.at>

	* (argh) added libconfix.plugins.c.relocated_headers to setup.py
	* Release 2.0.0pre24	

2007-03-01 Joerg Faschingbauer <joerg.faschingbauer@aon.at>

	* core.machinery.builder.Builder: new method force_enlarge() which
	  can be used to easily request another enlarge round. (people
	  used to add an artificial provide object for that purpose.)
	* plugins.c: removed GraphInstaller and DefaultInstaller. the
	  responsibility of the latter was moved back into
	  h.HeaderBuilder; the former has no replacement.
	* started to move tests from the toplevel 'tests' directory into
	  subdirectories (named 'tests') of the source to be tested.
	* Release 2.0.0pre23
 
2007-02-11 Joerg Faschingbauer <joerg.faschingbauer@aon.at>

	* plugins.make.iface: new method CALL_MAKE_AND_RESCAN_SYNC()
	* plugins.c.compiled, plugins.c.linked: use
	  $(readonly_prefixes_incpath) and $(readonly_prefixes_libpath)
	  instead of the respective @readonly_prefixes_...@
	  AC_SUBSTitutions
	* Release 2.0.0pre22

2007-02-07 Joerg Faschingbauer <joerg.faschingbauer@aon.at>

	* Bug fix: "[ 1654643 ] URGENCY_ERROR require need not be resolved
	  immediately"

2007-01-25 Joerg Faschingbauer <joerg.faschingbauer@aon.at>

	* Bug fix in plugins.make.caller: ambiguous provide objects
	  generated.
	* Release 2.0.0pre21
