@@ -104,51 +104,4 @@ class EdgeFinder(digraph.EdgeFinder):
             raise error
         pass
 
-        # jjjj
-
-##     def find_out_edges(self, node):
-##         errors = []
-
-##         # dictionary:
-##         #    key: node
-##         #    value: set of requires that pull in the node
-##         successors = {}
-        
-##         for r in node.requires():
-##             found_nodes = self.__providemap.find_match(r)
-
-##             if len(found_nodes) == 0:
-##                 if r.urgency() == Require.URGENCY_ERROR:
-##                     errors.append(EdgeFinder.RequireNotResolved(r))
-##                     continue
-##                 if r.urgency() == Require.URGENCY_WARN:
-##                     debug.warn('Require object '+str(r)+' could not be resolved')
-##                     continue
-##                 if r.urgency() == Require.URGENCY_IGNORE:
-##                     continue
-##                 assert 0, 'huh? missed urgency level '+str(r.urgency())
-##                 pass
-##             if len(found_nodes) > 1:
-##                 errors.append(Error('Found more than one node resolving require object "'+\
-##                                     str(r)+': '+\
-##                                     str(['.'.join(n.fullname()) for n in found_nodes])))
-##                 continue
-
-##             successor = found_nodes[0]
-##             assert successor is not node, 'self-cycle detected'
-##             if not successors.has_key(successor):
-##                 successors[successor] = set()
-##                 pass
-##             successors[successor].add(r)
-
-##             pass
-
-##         if len(errors):
-##             raise EdgeFinder.SuccessorNotFound(node, errors)
-
-##         edges = []
-##         for succ, requires in successors.iteritems():
-##             edges.append(digraph.Edge(tail=node, head=succ, annotations=requires))
-##             pass
-
-##         return edges
+    pass
