@@ -1,4 +1,4 @@
-# Copyright (C) 2006-2007 Joerg Faschingbauer
+# Copyright (C) 2007 Joerg Faschingbauer
 
 # This library is free software; you can redistribute it and/or modify
 # it under the terms of the GNU Lesser General Public License as
@@ -15,27 +15,17 @@
 # Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA 02111-1307
 # USA
 
-from regressions.suite_inmem import RegressionsInMemorySuite
-
-from header.suite_inmem import HeaderInMemorySuite
-
-from libconfix.plugins.c.setups.tests.suite_inmem import SetupsInMemorySuite
-from libconfix.plugins.c.relocated_headers.tests.suite_inmem import RelocatedHeadersInMemorySuite
-from libconfix.plugins.c.pkg_config.tests.suite_inmem import PkgConfigInMemorySuite
+from bug1713807 import Bug1713807
 
 import unittest
 
-class CInMemoryTestSuite(unittest.TestSuite):
+class RegressionsInMemorySuite(unittest.TestSuite):
     def __init__(self):
         unittest.TestSuite.__init__(self)
-        self.addTest(SetupsInMemorySuite())
-        self.addTest(RelocatedHeadersInMemorySuite())
-        self.addTest(HeaderInMemorySuite())
-        self.addTest(PkgConfigInMemorySuite())
-        self.addTest(RegressionsInMemorySuite())
+        self.addTest(Bug1713807())
         pass
     pass
 
 if __name__ == '__main__':
-    unittest.TextTestRunner().run(CInMemoryTestSuite())
+    unittest.TextTestRunner().run(RegressionsInMemorySuite())
     pass
